--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -2,14 +2,85 @@
 
 {{define "content"}}
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <h1>This is the home page</h1>
-            <p>This is some text</p>
-            <p> {{ index .StringMap "test" }}
-            </p>
+
+    <div class="carousel slide carousel-fade" data-bs-ride="carousel" id="main-carousel">
+
+        <div class="carousel-indicators">
+            <button aria-current="true" aria-label="Slide 1" class="active" data-bs-slide-to="0"
+                    data-bs-target="#main-carousel"
+                    type="button"></button>
+            <button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#main-carousel" type="button"></button>
+            <button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#main-carousel" type="button"></button>
+        </div>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img alt="Woman and laptop" class="d-block w-100" src="/static/images/woman-laptop.png">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+
+
+            </div>
+            <div class="carousel-item">
+                <img alt="Tray with coffee" class="d-block w-100" src="/static/images/tray.png">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+
+
+            </div>
+            <div class="carousel-item">
+                <img alt="Outside" class="d-block w-100" src="/static/images/outside.png">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+
+
+        <div class="row">
+            <div class="col">
+
+                <h1 class="text-center mt-4">Welcome to Drew's Bed and Breakfast</h1>
+                <p>Your home away from home, set on the majestic shores of Lake Victoria.This will be a vacation to
+                    remember.
+                    Your home away from home, set on the majestic shores of Lake Victoria.This will be a vacation to
+                    remember.
+                    Your home away from home, set on the majestic shores of Lake Victoria.This will be a vacation to
+                    remember.
+
+                    Your home away from home, set on the majestic shores of Lake Victoria.This will be a vacation to
+                    remember.
+
+                    Your home away from home, set on the majestic shores of Lake Victoria.This will be a vacation to
+                    remember.
+                    Your home away from home, set on the majestic shores of Lake Victoria.This will be a vacation to
+                    remember.
+
+
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col text-center">
+
+                <a class="btn btn-success" href="/search-availability/">Make Reservation Now</a> 
+            </div>
 
         </div>
+
+
     </div>
 </div>
 {{end}}
