--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -4,36 +4,55 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1 class="mt-3">Make Reservation</h1>
+            <h1 class="mt-3">Make a Reservation</h1>
+            <p><strong>Reservation Details</strong></p>
 
-            <form action="" class="needs-validation" method="post" novalidate>
+            {{$res := index .Data "reservation"}}
+
+            <form action="/make-reservation/" class="" method="post" novalidate>
+                <input name="csrf_token" type="hidden" value="{{.CSRFToken}}">
 
                 <div class="form-group mt-3">
                     <label for="first_name">First Name:</label>
+                    {{with .Form.Errors.Get "first_name"}}
+                    <label class="text-danger">{{.}}</label>
+                    {{end}}
                     <input autocomplete="off"
-                           class="form-control" id="first_name" name='first_name'
-                           required type='text' value="">
+                           class='form-control {{with .Form.Errors.Get "first_name"}} is-invalid {{end}}'
+
+                           id="first_name" name='first_name' required type='text' value="{{$res.FirstName}}">
                 </div>
+
 
                 <div class="form-group">
                     <label for="last_name">Last Name:</label>
+                    {{with .Form.Errors.Get "last_name"}}
+                    <label class="text-danger">{{.}}</label>
+                    {{end}}
                     <input autocomplete="off"
-                           class="form-control" id="last_name" name='last_name'
-                           required type='text' value="">
+                           class='form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}' id="last_name"
+                           name='last_name'
+                           required type='text' value="{{$res.LastName}}">
                 </div>
 
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input autocomplete="off" class="form-control"
+                    {{with .Form.Errors.Get "email"}}
+                    <label class="text-danger">{{.}}</label>
+                    {{end}}
+                    <input autocomplete="off" class='form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}'
                            id="email" name='email'
-                           required type='email' value="">
+                           required type='email' value="{{$res.Email}}">
                 </div>
 
                 <div class="form-group">
                     <label for="phone">Phone:</label>
-                    <input autocomplete="off" class="form-control"
+                    {{with .Form.Errors.Get "phone"}}
+                    <label class="text-danger">{{.}}</label>
+                    {{end}}
+                    <input autocomplete="off" class='form-control {{with .Form.Errors.Get "phone"}} is-invalid {{end}}'
                            id="phone" name='phone'
-                           required type='email' value="">
+                           required type='email' value="{{$res.Phone}}">
                 </div>
 
                 <hr>
