--- a/templates/presidential.page.tmpl
+++ b/templates/presidential.page.tmpl
@@ -84,6 +84,7 @@
                 const rp = new DateRangePicker(elem, {
                     format: 'yyyy-mm-dd',
                     showOnFocus: true,
+                    minDate: new Date(),
                 })
             },
 
@@ -98,16 +99,36 @@
                 let form = document.getElementById("check-availability-form");
                 let formData = new FormData(form);
                 formData.append("csrf_token", "{{.CSRFToken}}");
+                formData.append("room_id", "1");
 
                 fetch('/search-availability-json/', {
                     method: "post",
                     body: formData,
+                    
                 })
                     .then(response => response.json())
                     .then(data => {
-                        console.log(data);
-                        console.log(data.ok);
-                        console.log(data.message);
+
+                      if (data.ok) {
+                          attention.custom({
+                              icon: 'success',
+                              showConfirmButton: false,
+                              msg: '<p>The room is available!</p>'
+                                    + '<p><a href="/book-room?id='
+                                    +   data.room_id
+                                    +   '&s='
+                                    +   data.start_date
+                                    +   '&e='
+                                    +   data.end_date
+                                    +   '" class="btn btn-primary">'
+                                    + 'Book Now!</a></p>',
+                          })
+
+                      } else {
+                         attention.error({
+                             msg: "The room is not available on those dates." ,
+                         })
+                      }
                     })
             }
         });
