conclusion of chapter 15

--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -73,6 +73,10 @@
                     <li class="nav-item">
                         <a aria-disabled="true" class="nav-link" href="/contact/" tabindex="-1">Contact</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a aria-disabled="true" class="nav-link" href="/user/login" tabindex="-1">Login</a>
+                    </li>
                 </ul>
 
             </div>
