--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -75,7 +75,12 @@
                     </li>
 
                     <li class="nav-item">
+                        {{if eq .IsAuthenticated 1}}
+                        <a aria-disabled="true" class="nav-link" href="/user/logout" tabindex="-1">Logout</a>
+
+                        {{else}}
                         <a aria-disabled="true" class="nav-link" href="/user/login" tabindex="-1">Login</a>
+                        {{end}}
                     </li>
                 </ul>
 
