final version to be uploaded to server

--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -60,18 +60,18 @@
                             Rooms
                         </a>
                         <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/presidential-suites/">Presidential Suites</a></li>
-                            <li><a class="dropdown-item" href="/platinum-rooms/">Platinum rooms</a></li>
+                            <li><a class="dropdown-item" href="/generals-quarters">General's Quarters</a></li>
+                            <li><a class="dropdown-item" href="/majors-suite">Major's Suites</a></li>
 
                         </ul>
                     </li>
 
                     <li class="nav-item">
-                        <a aria-disabled="true" class="nav-link" href="/search-availability/" tabindex="-1">Search Availability</a>
+                        <a aria-disabled="true" class="nav-link" href="/search-availability" tabindex="-1">Search Availability</a>
 
 
                     <li class="nav-item">
-                        <a aria-disabled="true" class="nav-link" href="/contact/" tabindex="-1">Contact</a>
+                        <a aria-disabled="true" class="nav-link" href="/contact" tabindex="-1">Contact</a>
                     </li>
 
                     <li class="nav-item">
@@ -174,7 +174,7 @@
 
         function notifyModal(title, text, icon, confirmationButtonText) {
             Swal.fire({
-                title: title,
+             title: title,
                 html: text,
                 icon: icon,
                 confirmButtonText: confirmationButtonText
