--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,20 +1,14 @@
 .my-footer {
-    height: 5em;
-    background-color: #492e1b;
-    margin-top: 1.3em;
+    /*height: 10em !important;*/
+    background-color: #163b65;
+    margin-top: 1.5em;
     padding: 1em;
     color: #FFFFFF;
     font-size: 80%;
-
 }
 
 .room-image {
     max-width: 50%;
-}
-
-/* override styles here*/
-.notie-container {
-    box-shadow: none;
 }
 
 .datepicker {
