--- a/templates/admin-all-reservations.page.tmpl
+++ b/templates/admin-all-reservations.page.tmpl
@@ -1,9 +1,8 @@
 {{template "admin" .}}
 
-    {{define "css"}}
+{{define "css"}}
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
-        
-    {{end}}
+{{end}}
 
 {{define "page-title"}}
     All Reservations
@@ -13,55 +12,42 @@
     <div class="col-md-12">
         {{$res := index .Data "reservations"}}
 
-        <table class="table table-striped table-hover" id="all-reservations">
+        <table class="table table-striped table-hover" id="all-res">
             <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>FirstName</th>
-                    <th>Last Name</th>
-                    <th>Email</th>
-                    <th>Phone</th>
-                    <th>Room</th>
-                    <th>Arrival</th>
-                    <th>Departure</th>
-                </tr>
+            <tr>
+                <th>ID</th>
+                <th>Last Name</th>
+                <th>Room</th>
+                <th>Arrival</th>
+                <th>Departure</th>
+            </tr>
             </thead>
             <tbody>
             {{range $res}}
-                           
                 <tr>
                     <td>{{.ID}}</td>
                     <td>
                         <a href="/admin/reservations/all/{{.ID}}/show">
-                        {{.FirstName}}
+                            {{.LastName}}
                         </a>
                     </td>
-                    <td>{{.LastName}}</td>
-                    <td>{{.Email}}</td>
-                    <td>{{.Phone}}</td>
                     <td>{{.Room.RoomName}}</td>
                     <td>{{humanDate .StartDate}}</td>
                     <td>{{humanDate .EndDate}}</td>
-
                 </tr>
-
             {{end}}
             </tbody>
         </table>
     </div>
-
 {{end}}
 
 {{define "js"}}
-<script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const dataTable = new simpleDatatables.DataTable("#all-reservations", {
-            select: 6, sort: "desc" , //we arrange arrival time in order
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const dataTable = new simpleDatatables.DataTable("#all-res", {
+                select: 3, sort: "desc",
+            })
         })
-
-    })
-
-</script>
-
+    </script>
 {{end}}
