--- a/templates/admin-new-reservations.page.tmpl
+++ b/templates/admin-new-reservations.page.tmpl
@@ -1,67 +1,53 @@
 {{template "admin" .}}
 
-    {{define "css"}}
+{{define "css"}}
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
-    
-    {{end}}
+{{end}}
 
 {{define "page-title"}}
     New Reservations
 {{end}}
 
 {{define "content"}}
-<div class="col-md-12">
-    {{$res := index .Data "reservations"}}
+    <div class="col-md-12">
+        {{$res := index .Data "reservations"}}
 
-    <table class="table table-striped table-hover" id="new-reservations">
-        <thead>
+        <table class="table table-striped table-hover" id="new-res">
+            <thead>
             <tr>
                 <th>ID</th>
-                <th>FirstName</th>
                 <th>Last Name</th>
-                <th>Email</th>
-                <th>Phone</th>
                 <th>Room</th>
                 <th>Arrival</th>
                 <th>Departure</th>
             </tr>
-        </thead>
-        <tbody>
-        {{range $res}}
-                       
-            <tr>
-                <td>{{.ID}}</td>
-                <td>
-                    <a href="/admin/reservations/new/{{.ID}}/show">
-                    {{.FirstName}}
-                    </a>
-                </td>
-                <td>{{.LastName}}</td>
-                <td>{{.Email}}</td>
-                <td>{{.Phone}}</td>
-                <td>{{.Room.RoomName}}</td>
-                <td>{{humanDate .StartDate}}</td>
-                <td>{{humanDate .EndDate}}</td>
-
-            </tr>
-
-        {{end}}
-        </tbody>
-    </table>
-</div>
-
+            </thead>
+            <tbody>
+            {{range $res}}
+                <tr>
+                    <td>{{.ID}}</td>
+                    <td>
+                        <a href="/admin/reservations/new/{{.ID}}/show">
+                            {{.LastName}}
+                        </a>
+                    </td>
+                    <td>{{.Room.RoomName}}</td>
+                    <td>{{humanDate .StartDate}}</td>
+                    <td>{{humanDate .EndDate}}</td>
+                </tr>
+            {{end}}
+            </tbody>
+        </table>
+    </div>
 {{end}}
 
 {{define "js"}}
-<script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const dataTable = new simpleDatatables.DataTable("#new-reservations", {
-            select: 6, sort: "desc" , //we arrange arrival time in order
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const dataTable = new simpleDatatables.DataTable("#new-res", {
+                select: 3, sort: "desc",
+            })
         })
-
-    })
-
-</script>
-
+    </script>
 {{end}}
