--- a/templates/admin-reservations-calendar.page.tmpl
+++ b/templates/admin-reservations-calendar.page.tmpl
@@ -1,7 +1,7 @@
 {{template "admin" .}}
 
 {{define "page-title"}}
-    Reservations Calendar
+    Reservation Calendar
 {{end}}
 
 {{define "content"}}
@@ -11,23 +11,20 @@
     {{$curMonth := index .StringMap "this_month"}}
     {{$curYear := index .StringMap "this_month_year"}}
 
-
     <div class="col-md-12">
-       
+
         <div class="text-center">
-            <h3>
-                {{formatDate $now "January"}}  {{formatDate $now "2006"}}
-            </h3>
+            <h3>{{formatDate $now "January"}} {{formatDate $now "2006"}}</h3>
         </div>
 
         <div class="float-left">
-            <a class="btn btn-sm btn-outline-secondary" 
-            href="/admin/reservations-calendar?y={{index .StringMap "last_month_year"}}&m={{index .StringMap "last_month"}}">&lt;&lt;</a>
+            <a class="btn btn-sm btn-outline-secondary"
+               href="/admin/reservations-calendar?y={{index .StringMap "last_month_year"}}&m={{index .StringMap "last_month"}}">&lt;&lt;</a>
         </div>
 
         <div class="float-right">
-            <a class="btn btn-sm btn-outline-secondary" 
-            href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
+            <a class="btn btn-sm btn-outline-secondary"
+               href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
         </div>
 
         <div class="clearfix"></div>
@@ -36,16 +33,16 @@
             <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
             <input type="hidden" name="m" value="{{index .StringMap "this_month"}}">
             <input type="hidden" name="y" value="{{index .StringMap "this_month_year"}}">
-        {{range $rooms}}
+
+            {{range $rooms}}
                 {{$roomID := .ID}}
                 {{$blocks := index $.Data (printf "block_map_%d" .ID)}}
                 {{$reservations := index $.Data (printf "reservation_map_%d" .ID)}}
 
+                <h4 class="mt-4">{{.RoomName}}</h4>
 
-            <h4 class="mt-4">{{.RoomName}}</h4>
-
-            <div class="table-response">
-                <table class="table table-bordered table-sm">
+                <div class="table-response">
+                    <table class="table table-bordered table-sm">
                         <tr class="table-dark">
                             {{range $index := iterate $dim}}
                                 <td class="text-center">
@@ -53,7 +50,6 @@
                                 </td>
                             {{end}}
                         </tr>
-
 
                         <tr>
                             {{range $index := iterate $dim}}
@@ -82,8 +78,6 @@
 
 
             {{end}}
-
-        
 
             <hr>
 
