--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -75,7 +75,7 @@
 
             <div class="col text-center">
 
-                <a class="btn btn-success" href="/search-availability/">Make Reservation Now</a> 
+                <a class="btn btn-success" href="/search-availability">Make Reservation Now</a> 
             </div>
 
         </div>
